--- a/style.css
+++ b/style.css
@@ -82,12 +82,6 @@ body, html {
 }
 
 
-#products h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    width: 100%;
-    text-align: center;
-}
 
 .produto  {
     position: relative;
@@ -104,15 +98,17 @@ body, html {
 
 }
 
-.produto h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
 
-}
+
+
 
 .produto p {
     font-size: 1rem;
+    margin: 20px;
+
 }
+
+
 
 .produto:hover {
     transform: translateY(-10px);
@@ -257,6 +253,22 @@ body, html {
 @media (max-width: 768px) {
     #modelos {
         grid-template-columns: 1fr; /* Ajusta para uma coluna no mobile */
+    }
+    .classicos {
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+    }
+    .classicos .classicos-texto{
+        display: flex;
+        width: 100%;
+        padding: 30px;
+        margin-top: 50px;
+        margin-left: 0%;
+    }
+    .classicos .classicos-img{
+        width: 100%;
+        padding: 0;
     }
 }
 
