--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body, html {
     color: white;
 }
 
+header {
+    width: 100vw;
+    height: 100vh;
+}
+
 .video-container {
     position: relative;
     height: 100vh;
@@ -115,9 +120,14 @@ body, html {
 }
 
 @media (max-width: 768px) {
-    .produto {
-        flex: 100%;
-    }
+    header section video  {
+        width: 1200px;
+
+        
+      
+    
+
+    }  
 }
 
 
